reflect-demo/src/tests/snapshots/reflect_demo__tests__enums__enum_with_generics.snap
---
source: reflect-demo/src/tests/enums.rs
expression: "TestEnumWithGenerics::<u8>::reflect_input()"
---
[
  {
    "name": "reflect_demo::tests::enums::TestEnumWithGenerics",
    "parameters": [
      {
        "name": "u8"
      }
    ]
  },
  {
    "name": "",
    "types": [
      {
        "kind": "enum",
        "name": "reflect_demo::tests::enums::TestEnumWithGenerics",
        "parameters": [
          {
            "name": "T"
          }
        ],
        "variants": [
          {
            "name": "Variant1",
            "fields": [
              {
                "name": "0",
                "type": {
                  "name": "T"
                }
              }
            ]
          },
          {
            "name": "Variant2",
            "fields": [
              {
                "name": "0",
                "type": {
                  "name": "T"
                }
              },
              {
                "name": "1",
                "type": {
                  "name": "T"
                }
              }
            ]
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
]
