reflect-demo/src/tests/snapshots/reflect_demo__tests__enums__enum_with_generics_and_fields-2.snap
---
source: reflect-demo/src/tests/enums.rs
expression: "super::into_input_typescript_code::<TestEnumWithGenericsAndFields<u8>>()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflect-cli
//
// Schema name: 
// 




export namespace reflect {

/// Struct object with no fields
export interface Empty {
    }


/// Error object which is expected to be never returned
export interface Infallible {
    }

}

export namespace reflect_demo {

export namespace tests {

export namespace enums {

export type TestEnumWithGenericsAndFields<T> =
    | { Variant1: number /* u8 */ }
    | { Variant2: [T,
T] }
    ;

}
}
}
