reflect-demo/src/tests/snapshots/reflect_demo__tests__enums__enum_with_generics_and_fields.snap
---
source: reflect-demo/src/tests/enums.rs
expression: "TestEnumWithGenericsAndFields::<u8>::reflect_input()"
---
[
  {
    "name": "reflect_demo::tests::enums::TestEnumWithGenericsAndFields",
    "parameters": [
      {
        "name": "u8"
      }
    ]
  },
  {
    "name": "",
    "types": [
      {
        "kind": "enum",
        "name": "reflect_demo::tests::enums::TestEnumWithGenericsAndFields",
        "parameters": [
          {
            "name": "T"
          }
        ],
        "variants": [
          {
            "name": "Variant1",
            "fields": [
              {
                "name": "0",
                "type": {
                  "name": "u8"
                },
                "required": true
              }
            ]
          },
          {
            "name": "Variant2",
            "fields": [
              {
                "name": "0",
                "type": {
                  "name": "T"
                },
                "required": true
              },
              {
                "name": "1",
                "type": {
                  "name": "T"
                },
                "required": true
              }
            ]
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
]
