reflect-demo/src/tests/snapshots/reflect_demo__tests__enums__enum_with_generics_and_fields_and_named_fields.snap
---
source: reflect-demo/src/tests/enums.rs
expression: "TestEnumWithGenericsAndFieldsAndNamedFields::<u8>::reflect_input()"
---
[
  {
    "name": "reflect_demo::tests::enums::TestEnumWithGenericsAndFieldsAndNamedFields",
    "parameters": [
      {
        "name": "u8"
      }
    ]
  },
  {
    "name": "",
    "types": [
      {
        "kind": "enum",
        "name": "reflect_demo::tests::enums::TestEnumWithGenericsAndFieldsAndNamedFields",
        "parameters": [
          {
            "name": "T"
          }
        ],
        "variants": [
          {
            "name": "Variant1",
            "fields": [
              {
                "name": "0",
                "type": {
                  "name": "u8"
                },
                "required": true
              }
            ]
          },
          {
            "name": "Variant2",
            "fields": [
              {
                "name": "0",
                "type": {
                  "name": "T"
                },
                "required": true
              },
              {
                "name": "1",
                "type": {
                  "name": "T"
                },
                "required": true
              }
            ]
          },
          {
            "name": "Variant3",
            "fields": [
              {
                "name": "field1",
                "type": {
                  "name": "u8"
                },
                "required": true
              },
              {
                "name": "field2",
                "type": {
                  "name": "T"
                },
                "required": true
              }
            ]
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
]
